fixing spacing problems on location page

--- a/src/app/components/location/location.component.css
+++ b/src/app/components/location/location.component.css
@@ -30,6 +30,8 @@
     align-items: center;
     justify-content: center;
     margin-top: 40px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .text {
@@ -39,11 +41,6 @@
     align-self: flex-start;
     padding: 0 2% 0 10%;
     font-size: clamp(15px, 2.0vw, 20px);
-}
-@media (max-width: 1100px) {
-    .text {
-        padding: 0 0 0 10%;
-    }
 }
 
 .image {
